--- a/src/app/userdata/userdata.component.html
+++ b/src/app/userdata/userdata.component.html
@@ -1,16 +1,18 @@
-<table>
-    <tr>
-        <th>Avatar</th>
-        <th>Id</th>
-        <th>Fist Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-    </tr>
-    <tr *ngFor="let user of users.data">
-        <td><img src={{user.avatar}} alt="avatar"></td>
-        <td>{{user.id}}</td>
-        <td>{{user.first_name}}</td>
-        <td>{{user.last_name}}</td>
-        <td>{{user.email}}</td>
-    </tr>
-</table>
+<div *ngIf="users">
+    <table>
+        <tr>
+            <th>Avatar</th>
+            <th>Id</th>
+            <th>Fist Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+        </tr>
+        <tr *ngFor="let user of users.data">
+            <td><img src={{user.avatar}} alt="avatar"></td>
+            <td>{{user.id}}</td>
+            <td>{{user.first_name}}</td>
+            <td>{{user.last_name}}</td>
+            <td>{{user.email}}</td>
+        </tr>
+    </table>
+</div>
